<resources>
    <string name="app_name">BiblioTech</string>
    <string name="login" >Login</string>
    <string name="email_address" > Email Address:</string>
    <string name="password" />
    <string name="Log_in" >Log in</string>
    <string name="_44_1234567890">+44 1234567890</string>
    <string name="usersupport_bibliotech_co_uk">usersupport@bibliotech.co.uk</string>
    <string name="enter_your_email">enter your email</string>
    <string name="enter_your_password">enter your password</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="book_catalogue">Book Catalogue</string>
    <string name="personal_information">Personal Information</string>
    <string name="book_requests">Book Requests</string>
    <string name="manage_catalogue">Manage Catalogue</string>
    <string name="manage_members">Manage Members</string>
    <string name="manage_book_requests">Manage Book Requests</string>
    <string name="log_out">Log out</string>
    <string name="notifications">Notifications</string>
    <string name="requests_answered">Requests Answered</string>
    <string name="details_changed">Details Changed</string>
    <string name="need_help">Need Help?</string>
    <string name="back">Back</string>
    <string name="search">Search...</string>
    <string name="edit_field">edit field</string>
    <string name="john">John</string>
    <string name="john_doe_example_com">john.doe@example.com</string>
    <string name="doe">Doe</string>
    <string name="unanswered_requests">Unanswered Requests</string>
    <string name="answered_requests">Answered Requests</string>
    <string name="member_name">Member Name</string>
    <string name="contact_email">Contact Email</string>
    <string name="add_new_member">Add New Member</string>
    <string name="book_title">Book Title</string>
    <string name="issued_yyyy_mm_dd">Issued: YYYY-MM-DD</string>
    <string name="return_yyyy_mm_dd">Return: YYYY-MM-DD</string>
    <string name="staff_log_in">Staff Log In</string>
    <string name="add_member">Add Member</string>
    <string name="add_book">Add Book</string>
    <string name="manage_book">Manage Book</string>
    <string name="save_changes">Save Changes</string>
    <string name="book_author">Book Author</string>
    <string name="book_issue_date">Book Issue Date</string>
    <string name="book_return_date">Book Return Date</string>
    <string name="current_borrower">Current Borrower</string>
    <string name="return_date">Return Date</string>
    <string name="issue_date">Issue Date</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="book_borrower">Book Borrower</string>
    <string name="delete_book">Delete Book</string>
    <string name="first_name">First Name</string>
    <string name="username">Username</string>
    <string name="last_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="membership_end_date">Membership End Date</string>
    <string name="manage_individual">Manage Individual</string>
    <string name="delete_member">Delete Member</string>
    <string name="member_log_in">Member Log In</string>
</resources>