<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center_horizontal"
    > <!-- android:background="@drawable/book_item_bg" ADD LATER -->

    <!-- Enter Username -->
    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_margin="10dp"
    />

    <!-- ## TODO - if not for time constraints - I THINK HERE OR IN JAVA - make it so that the input form only takes in dates in the format 2026-01-01 -->

    <!-- Enter First Name! -->
    <EditText
        android:id="@+id/inputFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_margin="10dp"
    />

    <!-- input Last Name! -->
    <EditText
        android:id="@+id/inputLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_margin="10dp"
    />

    <!-- input Email -->
    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/contact_email"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_margin="10dp"
    />

    <!-- input Contact (Number)! -->
    <EditText
        android:id="@+id/inputContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/contact_number"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_margin="10dp"
    />

    <!-- input Membership End Date! -->
    <EditText
        android:id="@+id/input_membership_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/membership_end_date"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_margin="10dp"
    />

</LinearLayout>
