<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:gravity="center_horizontal"

> <!-- android:background="@drawable/book_item_bg" ADD LATER -->

    <!-- Book title! -->
    <TextView
        android:id="@+id/textBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#451F55" />

    <!-- Book Author! -->
    <TextView
        android:id="@+id/textBookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_author"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#451F55" />

    <!-- Book issue date! (hidden so it doesn't show in the catalogue)-->
    <TextView
        android:id="@+id/textIssueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/issued_yyyy_mm_dd"
        android:textSize="14sp"
        android:textColor="#537BDF"
        android:visibility="gone"
    />

    <!-- Book return date! (hidden so it doesn't show in the catalogue)-->
    <TextView
        android:id="@+id/textReturnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_yyyy_mm_dd"
        android:textSize="14sp"
        android:textColor="#537BDF"
        android:visibility="gone"
    />

    <!-- Current Book Borrower! (hidden so it doesn't show in the catalogue)-->
    <TextView
        android:id="@+id/textBookBorrower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_borrower"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#451F55"
        android:visibility="gone"
    />

</LinearLayout>
