<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9EEFB"
    tools:context=".LoginActivity"
    tools:ignore="ExtraText"
    > <!-- setup stuff (with the nice background colour!) -->


    <!-- Title (add New Member) -->
    <TextView
        android:id="@+id/addNewMemberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_member"
        android:textAppearance="@style/TitleAppearance"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
    />

    <!-- Add member fields container! xo -->
    <LinearLayout
        android:id="@+id/addNewFieldsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        app:layout_constraintTop_toBottomOf="@id/addNewMemberTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    >


        <!-- EMAIL Card view (so I can add rounded corners) -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cardCornerRadius="10dp"
            android:layout_marginBottom="15dp"
        >

            <!-- Layout for Contact Email! -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="8dp"
            >

                <!-- contact email text -->
                <EditText
                    android:id="@+id/addContactEmail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/john_doe_example_com"
                    android:background="@android:color/transparent"
                    android:textColor="#444"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"
                    android:enabled="true"
                    android:autofillHints="emailAddress"
                />

                <!-- contact email edit symbol image -->
                <ImageView
                    android:id="@+id/editEmail"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@android:drawable/ic_menu_edit"
                    android:contentDescription="@string/edit_field"

                    app:tint="#646978"
                />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- FIRSTNAME Card view (so I can add rounded corners!) -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cardCornerRadius="10dp"
            android:layout_marginBottom="15dp"
        >

            <!-- first name layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="8dp"
            >

                <!-- first name text -->
                <EditText
                    android:id="@+id/addFirstName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/john"
                    android:background="@android:color/transparent"
                    android:textColor="#444"
                    android:textSize="16sp"
                    android:inputType="textPersonName"
                    android:enabled="true"
                    android:autofillHints="firstName"
                />

                <!-- First Name edit symbol image -->
                <ImageView
                    android:id="@+id/editFirstName"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@android:drawable/ic_menu_edit"
                    android:contentDescription="@string/edit_field"

                    app:tint="#646978"
                />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- LASTNAME Card view (so I can add rounded corners) -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cardCornerRadius="10dp"
            android:layout_marginBottom="15dp"
            >

            <!-- last name layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="8dp"
                >

                <!-- last Name edittext -->
                <EditText
                    android:id="@+id/addLastName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/doe"
                    android:background="@android:color/transparent"
                    android:textColor="#444"
                    android:textSize="16sp"
                    android:inputType="textPersonName"
                    android:enabled="true"
                    android:autofillHints="lastName"
                />

                <!-- last Name edit symbol -->
                <ImageView
                    android:id="@+id/editLastName"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@android:drawable/ic_menu_edit"
                    android:contentDescription="@string/edit_field"

                    app:tint="#646978"
                />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>



    <!-- Add Member Button -->
    <Button
        android:id="@+id/addMemberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:enabled="true"
        android:text="@string/add_member"

        app:layout_constraintTop_toBottomOf="@id/addNewFieldsLayout"
        app:layout_constraintBottom_toTopOf="@id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintHorizontal_bias="0.5"
    />




    <!-- Back Button -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:enabled="true"
        android:textColor="@color/black"
        android:background="#9E756FED"
        android:text="@string/back"

        app:layout_constraintBottom_toTopOf="@id/brandTag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addNewFieldsLayout"
        app:layout_constraintHorizontal_bias="0.5"
    />


    <TextView
        android:id="@+id/brandTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/LogoAppearance"
        android:layout_marginBottom="15dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.9"
    />


</androidx.constraintlayout.widget.ConstraintLayout>